# SID_beta

./: .env.example  .gitignore  CLAUDE.md  README.md  TASKS.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  graph.py  main.py  schemas.py
backend/app/sid_beta/: config.py  main.py  models.py  samples.py
backend/samples/: samples_description.md
backend/tests/: test_basics.py  test_e2e.py  test_perf_e2e.py
docs/: TECHNICAL_MEMO.md  diagram.drawio  hardware_options.html  hardware_options.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  env.ts  index.css  types.ts
frontend/src/data/: demo.ts  demoFlow.ts  seed.ts
frontend/src/flow/: DropZone.tsx  FlowEditor.tsx  NodeEditor.tsx  RunPanel.tsx  flowTypes.ts  nodeTypes.tsx
frontend/src/registries/: DepartmentsPage.tsx  EmployeesPage.tsx
frontend/src/services/: classifyService.ts  departmentService.ts  employeeService.ts
src/sid_beta/: classifier.py  config.py  ingest.py  models.py
tests/: test_basics.py  test_e2e.py  test_perf_e2e.py
