[project]
name = "sid-beta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pawe213", email = "pawe213@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pydantic-ai-slim[openai]>=1.107.0",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.13.3",
    "pytest>=9.1.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
sid-beta = "sid_beta:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that require a live LM Studio server",
]
