[project]
name = "sid-beta-backend"
version = "0.1.0"
description = "FastAPI backend wrapping the sid_beta local-LLM document classifier."
readme = "README.md"
authors = [
    { name = "pawe213", email = "pawe213@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pydantic-ai-slim[openai]>=1.107.0",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.13.3",
    "pytest>=9.1.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
# Classifier CLI: ingest backend/samples + inline samples, classify, print.
sid-beta = "app.sid_beta:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

# Flat layout: the importable package `app` lives at backend/app (not src/).
[tool.uv.build-backend]
module-name = "app"
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
# Run from backend/ so `import app...` resolves against the source tree.
pythonpath = ["."]
markers = [
    "e2e: end-to-end tests that require a live LM Studio server",
]
